public/styles.css
/* Header Navbar */
/**/

* {
    font-family: 'Spartan', sans-serif;
    color: #450084;
}

body {
    background-color: rgba(75, 75, 75, 0.11) !important;
}

h1,
h3,
a {
    font-weight: 700 !important;
}

hr {
    border-style: dotted none none !important;
    border-color: rgb(133, 133, 112) !important;
    border-width: 6px !important;
    width: 6% !important;
    margin: 0 auto !important;
}
i {
    transition: transform .35s;
}
i:hover {
    color: #ffce48 !important;
    transform: scale(1.6);
}

.color-nav {
    background-color: #440084d7 !important;
    font-size: 1.25rem;
    letter-spacing: 1px;
}

.nav-link {
    color: #ffe18e !important;
    font-weight: 900 !important;
}

.nav-link:hover {
    color: white !important;
}

.dropdown-menu {
    background-color: #ffe18e !important;
    border-radius: 20px !important;
    border: 2px !important;
    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.6);

}

.dropdown-item {
    background-color: #ffe18e !important;
    border-radius: 20px !important;
    color: #450084 !important;
}

.dropdown-item:hover {
    color: rgb(255, 255, 255) !important;
}

.brand-nav {
    font-size: 1.25rem !important;
    color: #ffe18e !important;
    font-weight: 700;
    letter-spacing: 1px;
}

.brand-nav:hover {
    color: white !important;
}

.logo-pic {
    height: 100px;
    width: 125px;
}

.dropdown-toggle:hover .navbar {
    display: block !important;
}

/* Footer */

.footer {
    padding: 2% 2%;
    font-size: 0.9rem;
    background-color: #ffe18e !important;
    color: #450084;
    text-align: center;
}

.footer a {
    letter-spacing: 1px;
    color: #450084;
}

.footer a:hover {
    text-decoration: none;
    color: white;
}

.footer p {
    font-size: 1.5rem;
    font-weight: 700;
}

.foot-top {
    display: block;
    padding-bottom: 1%;
    font-size: 0.9rem;
}

.foot-bot {
    padding-bottom: 2%;
    font-size: 0.7rem;
}

.foot-dan,
.foot-ct {
    padding-right: 20px;
}

/* Head Page */
.title-paragraph {
    text-align: center;
}
.head-top-paragraph {
    text-align: center;
    padding: 6% 10% 8% 10%;
}

.head-first-title {
    padding-bottom: 3%;
    padding-top: 5%;
}

.head-first-para {
    padding-bottom: 10%;
    font-size: 1.25rem;
}

.head-github-container {
    text-align: center;
}

.head-github-title {
    padding: 0% 2% 4% 2%;
}

.each-card {
    position: relative;
    margin: 0 auto;
}

.head-github-btn {
    padding: 4% 2% 2% 2%;
}

.head-middle {
    text-align: center;
    padding: 6% 10% 3% 10%;
    font-size: 1.25rem;
}

.head-middle-title {
    padding-top: 8%;
    padding-bottom: 1%;
}

.head-middle-para {
    padding-bottom: 2%;
}

.head-resources-cards {
    text-align: center;
    padding: 0% 2% 8% 2%;
}

.head-resources-cards-title {
    padding-bottom: 5.5%;
}

.head-resources-cards-btn {
    padding: 6% 2% 1% 2%;
    text-align: center;
}

.head-bottom-para {
    text-align: center;
    padding: 0% 10% 6% 10%;
    font-size: 1.25rem;
}

.head-bp {
    padding-top: 8%;
}

/* Card */


.card-img-top {
    border-top-left-radius: 20px !important;
    border-top-right-radius: 20px !important;
    height: 150px;
    width: 200px;
}

.card {
    border-radius: 25px !important;
    width: 240px !important;
    background-color: rgb(230, 230, 230) !important;
    border: 1px !important;
    box-sizing: border-box;
    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.6);
    transition: transform .35s;
}

.card:hover {
    width: 350px;
    background-color: #ffe18e !important;
    transform: scale(1.3);
    z-index: 1;
}

.card-title {
    font-weight: 700 !important;
}

/* button */
.cardBtn {
    background: linear-gradient(to bottom, #440084 10%, #5f00bd 100%);
    background-color: #440084;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-size: 17px;
    padding: 14px 16px;
    text-decoration: none;
    text-shadow: 0px 1px 0px #4a008f;
    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.514);
    transition: transform .35s;

}

.cardBtn:hover {
    background: linear-gradient(to bottom, #5f00bd 5%, #440084 100%);
    background-color: #5f00bd;
    text-decoration: none;
    color: #f0c465;
    transform: scale(1.25);

}

.cardBtn:active {
    position: relative;
    top: 1px;
}

.headTopBtn {
    background: linear-gradient(to bottom, #ffe18e 50%, #f0c465 100%);
    background-color: #ffe18e;
    border-radius: 20px;
    display: inline-block;
    cursor: pointer;
    color: #5f00bd;
    font-size: 17px;
    padding: 14px 31px;
    text-decoration: none;
    text-shadow: 0px 1px 0px #ffe18e;
    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.514);
    transition: transform .35s;
}

.headTopBtn:hover {
    background: linear-gradient(to bottom, #f0c465 5%, #ffe18e 100%);
    background-color: #f0c465;
    text-decoration: none;
    color: #8000ff;
    transform: scale(1.25);
}

.headTopBtn:active {
    position: relative;
    top: 1px;
}

/* Github */
.git-buttons-div {
    padding-bottom: 10%;
}

.github-page-title {
    text-align: center;
    text-align: center;
    padding: 6% 10% 8% 10%;
    font-size: 1.25rem;
}



.git-tutorial-title,
.git-resource-title {
    text-align: center;
    padding: 10% 10% 6% 10%;
}

.git-tut-cards {
    padding: 0% 10% 8% 10%;
}

/* Code Pages */

.snip-div {
    padding: 0% 10% 8% 10%;
    text-align: center;
    transition: transform .35s;
}
.snip-class {
    width: 50%;
    border-radius: 30px;
    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.6);
    border: 2px;
    
}
.snip-div:hover {
    transform: scale(1.25); 
}

.snip-title {
    padding-top: 8%;
}
.middle-bullets-content {
    padding-bottom: 8%; 
}
.over-bullets {
    padding-bottom: 0%;
}
.over-bullets-title {
    padding: 10% 10% 3% 10%;
}
.over-cards {
    padding-top: 8%;
    padding-bottom: 6%;
}

.r-snip, .pyt-snip {
    padding-top: 8%;
    padding-bottom: 10%;
}

